--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -32,16 +32,30 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Restore previous htb_data.json
+        uses: actions/download-artifact@v3
+        with:
+          name: htb-data
+        continue-on-error: true
+
+      - name: Move restored file (if exists)
+        run: |
+          if [ -f htb_data.json ]; then
+            echo "Using previous htb_data.json as fallback."
+            mv htb_data.json old_htb_data.json
+          fi
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
-#      - name: Install dependencies
-#        run: pip install requests
+      - name: Install dependencies
+        run: pip install requests
 
       - name: Fetch HTB API Data
-        run: python src/fetch_htb_data.py
+        run: |
+          python fetch_htb_data.py || mv old_htb_data.json htb_data.json
 
       - name: Save API data as artifact
         uses: actions/upload-artifact@v4
